// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Task updatePackageJson with empty 1`] = `
Object {
  "description": undefined,
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": undefined,
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": undefined,
}
`;

exports[`Test Task updatePackageJson with no sodaru module key 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with normal 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with not-allowed keys 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with with somod 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;


exports[`Test Task updatePackageJson with wrong files 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong module 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong sideEffects 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;

exports[`Test Task updatePackageJson with wrong typings 1`] = `
Object {
  "description": "",
  "files": Array [
    "build",
  ],
  "module": "build/lib/index.js",
  "name": "@my-scope/my-module",
  "sideEffects": false,
  "somod": Any<String>,
  "typings": "build/lib/index.d.ts",
  "version": "1.0.1",
}
`;
